# cpp_template

./: .clang-format  .gitignore  CMakeLists.txt  README.md  justfile
benchmarks/: example_benchmark.cpp
include/: khelper.h  lib.h
src/: lib.cpp  main.cpp
tests/: example_test.cpp
